--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Adding config.py file.
+config.py
+# Adding API Practice  and random_numbers file.
+API_practice.ipynb
+random_numbers.ipynb
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
